@@ -1,5 +1,7 @@
 import copy_reg
 import persistent
+import zc.queue
+import collective.singing.channel
 import collective.dancing.composer
 
 safe_reconstructor = copy_reg._reconstructor
@@ -25,3 +27,15 @@ def fix_legacy_htmlcomposers(tool):
                 channel.composers = channel.composers
     finally:
         copy_reg._reconstructor = _reconstructor
+
+def upgrade_to_compositequeue(tool):
+    """collective.singing.message.MessageQueues used to store messages
+    in zc.queue.Queue objects, which are inefficient for large queues.
+    This upgrade modifies existing instances of MessageQueues to use
+    zc.queue.CompositeQueue instead."""
+    for channel in collective.singing.channel.channel_lookup():
+        for key in channel.queue.keys():
+            new = zc.queue.CompositeQueue()
+            for item in channel.queue[key]:
+                new.put(item)
+            channel.queue[key] = new
