@@ -14,4 +14,17 @@
 
   </genericsetup:upgradeSteps>
 
+  <genericsetup:upgradeSteps
+     profile="collective.dancing:default"
+     source="0.4b1"
+     destination="0.4b2">
+
+    <genericsetup:upgradeStep
+       handler=".upgrades.upgrade_to_compositequeue"
+       title="Use CompositeQueue for message queueing"
+       description=""
+       />
+
+  </genericsetup:upgradeSteps>
+
 </configure>
